:construction: added min height to work wrapper to prevent jumping issues

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ header > .headline-wrapper > p {
 
 .work-wrapper {
   padding: 0px;
+  min-height: 100px;
 }
 
 .portfolio-nav {
